--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -22,7 +22,7 @@ main {
 }
 
 .titulo {
-    color: #642a73;
+    color: #d3cdd4;
     font-size: 30px;
     text-align: center;
 }
@@ -35,7 +35,7 @@ header {
     background: #7F7FD5;
     /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, hsla(176, 68%, 74%, 0.589), hsla(219, 67%, 72%, 0.623), #2e2e7e), url(Imagenes/toro_fondo.jpg);
-    background: linear-gradient(to right, hsla(130, 63%, 43%, 0.589), hsla(113, 93%, 61%, 0.623), #4fbb46), url(../Imagenes/toro_fondo.jpg);
+    background: linear-gradient(to right, hsla(130, 36%, 29%, 0.589), hsla(113, 38%, 48%, 0.623), #3e613b), url(../Imagenes/toro_fondo.jpg);
     /* background-size: cover; cubre toda la zona y no la repite */
     background-size: cover;
     /* background-attachment: fixed; genera el efecto de que la imagen se mueve con respecto al fondo */
@@ -49,17 +49,19 @@ nav {
 }
 
 nav a {
-    color: #ece2e2;
+    color: #272020;
     font-weight: 300;
     text-decoration: none;
     margin-right: 10px;
+    font-weight: bold;
 }
 
 nav a:hover {
-    color: #c09898;
+    color: #e6cbcb;
     font-weight: 300;
     text-decoration: none;
     margin-right: 10px;
+    border-bottom: 2px solid #2c3834;
 }
 
 .wave {
@@ -103,10 +105,11 @@ header .textos-header {
 
 .contenido-textos h3 {
     margin-bottom: 15px;
+    color: #ffffff;
 }
 
 .contenido-textos h3 span {
-    background: #3f3f97;
+    background: #3f9743;
     color: #fff;
     border-radius: 50%;
     display: inline-block;
@@ -122,10 +125,11 @@ header .textos-header {
     padding: 0px 0px 30px 18px;
     text-align: justify;
     font-weight: 300;
+    color: #fff;
 }
 
 .portafolio {
-    background: #5d5dcac0;
+    background: #2c3834;
 }
 
 .galeria-port {
@@ -138,6 +142,7 @@ header .textos-header {
 .contenedor h2 {
     text-align: center;
     padding-bottom: 10px;
+    color: #fff;
 }
 
 .imagen-port {
@@ -147,7 +152,7 @@ header .textos-header {
     overflow: hidden;
     position: relative;
     cursor: pointer;
-    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+    box-shadow: 0 0 6px 0 rgba(245, 245, 245, 0.952);
 }
 
 .imagen-port>img {
@@ -158,8 +163,17 @@ header .textos-header {
     background-repeat: no-repeat;
 }
 
-.clientes-contenedor {
-    background: #8e8ee7a4;
+.clientes-contenedor .cards{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 40px;
+}
+
+.cards .card {
+    display: flex;
+    width: 80%;
+    height: 200px;
+    
 }
 
 .cards .card img {
@@ -167,32 +181,40 @@ header .textos-header {
     height: auto;
 }
 
+.card .contenido-texto-cad {
+    width: 400px;
+    text-align: justify;
+    padding: 20px;
+
+}
+
 .auto-services .contenedor {
-    
+
     width: 80%;
     height: 600px;
-    background: #7c7ca8;
     box-shadow: 0 0 20px #333;
 }
 
 .auto-services .contenedor h2 {
     text-align: center;
     justify-content: center;
+    color: #fff;
 }
 
 .servicio-ind {
     display: flex;
     flex-wrap: wrap;
-    
+    justify-content: center;
+
 }
 
-.servicio-ind img{
+.servicio-ind img {
     width: 220px;
     height: 220px;
     padding: 15px;
 }
 
-footer{
+footer {
     display: flex;
     align-items: center;
     justify-content: center;
